manifests/cosmos/harpoon/horcrux-stateful.yaml
#
apiVersion: apps/v1
kind: StatefulSet
metadata:
    name: harpoon-horcrux
    namespace: cosmos
spec:
    serviceName: harpoon-horcrux
    replicas: 3
    selector:
        matchLabels:
            app: harpoon-horcrux
    template:
        metadata:
            labels:
                app: harpoon-horcrux
        spec:
            containers:
                - name: horcrux-container
                  image: ghcr.io/pfc-developer/horcrux-container:0.06
                  command: ["/bin/launch.sh","harpoon-4"]
                  ports:
                    - containerPort: 2222
                      name: cosigner
                    - containerPort: 6001
                      name: prometheus   
                  volumeMounts:
                    - name: signer                    
                      mountPath: /run/sign                      
            volumes:  
                  - name: signer-1
                    secret:
                      secretName: harpoon-signer-1
                      items: 
                      - key: signer
                        path: ecies.json
                        mode: 511
                  - name: signer-2
                    secret:
                      secretName: harpoon-signer-2
                      items: 
                      - key: signer
                        path: ecies.json
                        mode: 511
                  - name: signer-3
                    secret:
                      secretName: harpoon-signer-3
                      items: 
                      - key: signer
                        path: ecies.json
                        mode: 511
                  - name: shard-1
                    secret:
                      secretName: harpoon-shard-1
                      items: 
                      - key: SHARD
                        path: shard.json
                        mode: 511
                  - name: shard-2
                    secret:
                      secretName: harpoon-shard-2
                      items: 
                      - key: SHARD
                        path: shard.json
                        mode: 511
                  - name: shard-3
                    secret:
                      secretName: harpoon-shard-3
                      items: 
                      - key: SHARD
                        path: shard.json
                        mode: 511
    volumeClaimTemplates:
    - metadata:
        name: signer
      spec:
        accessModes: [ "ReadWriteOncePod" ]
        storageClassName: ssd-impermanent-block-store
        resources:
          requests:
            storage: 10Mi
