manifests/cosmos/harpoon/monitoring.yaml
###
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  harpoon-chain-monitor
  namespace: cosmos
spec:
  selector:
    matchLabels:
      app:  harpoon-chain-monitor
  template:
    metadata:
      labels:
        app:  harpoon-chain-monitor
        kind-of: cosmos-exporter
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9300"        
    spec:
      containers:
      - name:  cosmos-exporter
        image: ghcr.io/pfc-developer/cosmos-exporter:v2.0.2
        resources:
          limits:
            memory: "1Gi"
            cpu: "1500m"
        ports:
            - containerPort: 9300
              name: prometheus
              protocol: TCP
        command: [ /usr/local/bin/kuji-cosmos-exporter ]
        args:
            - --denom=ukuji
            - --denom-coefficient=1000000
            - --bech-prefix=kujira 
            - --node=harpoon:9090 
            - --tendermint-rpc=http://harpoon:26657
            - --single
            - --validators=kujiravaloper10csmmwu6tv3hqrfmyuqx08xyup7nkafedmcpl5
            - --oracle
            - --wallets=kujira1zy6xs70lavuuyu0vqmlx57ycypaqcvphxc8t4a
            - --proposals
            - --upgrades
            - --price=false
      affinity:
        # place the price feeder in the same zone as node it is pushing stuff into
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key:  app.kubernetes.io/name
                operator: In
                values:
                - harpoon
            topologyKey: "zone"
