manifests/cosmos/harpoon/price-feeder.yaml
###
# /api/v1/metrics?format=prometheus 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  harpoon-price-feeder
  namespace: cosmos
spec:
  selector:
    matchLabels:
      app: harpoon-price-feeder
  template:
    metadata:
      labels:
        app: harpoon-price-feeder
    spec:
      volumes: 
        - name: harpoon-price-feeder-state
          persistentVolumeClaim:
            claimName: harpoon-price-feeder-state    
      containers:
      - name: harpoon-price-feeder
        image: ghcr.io/pfc-developer/kujira-price-feeder:v0.8.0
          
        resources:
          limits:
            memory: "1Gi"
            cpu: "1500m"
        ports:
            - containerPort: 8171
              name: price-server
        volumeMounts:
          - mountPath: /state
            name: harpoon-price-feeder-state
      affinity:
        # place the price feeder in the same zone as node it is pushing stuff into
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key:  app.kubernetes.io/instance
                operator: In
                values:
                - harpoon-0
            topologyKey: "zone"
