manifests/cosmos/harpoon/headless-service-horcrux.yaml
apiVersion: v1
kind: Service
metadata:
  name: harpoon-horcrux
  namespace: cosmos
spec:
  selector:
    app: harpoon-horcrux
  clusterIP: None
 
  # Prometheus port
  ports:
  - protocol: TCP
    port: 26660
    targetPort: 26660
