manifests/cosmos/harpoon/headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: harpoon-priv
  namespace: cosmos
spec:
  selector:
    app.kubernetes.io/name: harpoon
  clusterIP: None
  ports:
  - protocol: TCP
    port: 1234
    targetPort: 1234
